--- a/css/main.css
+++ b/css/main.css
@@ -914,7 +914,7 @@ textarea {
     object-fit: contain;
     border-radius: 1rem;
     position: absolute;
-    z-index: 49;
+    z-index: 1;
     top: 0;
     left: 0;
 }
@@ -938,6 +938,20 @@ textarea {
 .section-title {
     color: var(--else-text-color-50);
     margin-bottom: 1.6rem;
+}
+
+@media (max-width: 1320px) {
+    .wrapper {
+        max-width: calc(100% - 5rem);
+    }
+
+    header {
+        padding: 2.1rem 2.5rem;
+    }
+
+    footer {
+        padding: 2.275rem 2.5rem;
+    }
 }
 
 @media (max-width: 1080px) {
@@ -987,18 +1001,6 @@ textarea {
 }
 
 @media (max-width: 720px) {
-    header {
-        padding: 2.1rem 2.5rem;
-    }
-
-    footer {
-        padding: 2.275rem 2.5rem;
-    }
-
-    main {
-        padding: 0 2.5rem;
-    }
-
     .auth__form legend,
     .reg__form legend {
         margin-bottom: 4.1rem;
