--- a/css/wall.css
+++ b/css/wall.css
@@ -262,7 +262,7 @@
 }
 
 .third-part-in-header {
-    width: 25%;
+    width: 33%;
     display: none;
     position: relative;
 }
@@ -362,7 +362,7 @@
     max-height: 20px;
     position: absolute;
     top: 1rem;
-    right: 1.6rem;
+    left: 1.6rem;
     cursor: pointer;
     border-radius: 0;
     margin: 0;
@@ -508,6 +508,10 @@
     opacity: 0;
 }
 
+.wall__comments .other-users .date.mobile {
+    display: none;
+}
+
 .wall__comments .other-users .user-comment:hover .date,
 .wall__comments .other-users .user-comment:hover .delete-comment {
     opacity: 1;
@@ -597,11 +601,24 @@
     min-height: 4rem;
 }
 
+.first-part-mobile li a:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.first-part-mobile li {
+    border-radius: 1rem;
+    overflow: hidden;
+    width: 100%;
+}
+
 .first-part-mobile li a {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    padding: 1rem 1.6rem;
+    min-width: 100%;
+    transition: 0.2s;
 }
 
 .first-part-mobile li a svg {
@@ -715,127 +732,13 @@
     align-items: center;
     position: relative;
     display: none;
-    border-radius: 2rem;
-    overflow: hidden;
     margin-top: 2.6rem;
-    max-width: max-content;
-    box-shadow: var(--shadow-small);
-    transition: 0.2s;
-}
-
-.wall-filter-mobile.show {
-    padding-right: 19.7534rem;
-}
-
-.wall-filter-mobile .wall-filter-mobile-info {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    color: var(--main-accent-color);
-    z-index: 12;
-    background-color: var(--block-color);
-    padding: 1rem 2.6rem;
-    border-radius: 2rem;
-    transition: 0.2s;
-    cursor: pointer;
-}
-
-.wall-filter-mobile .wall-filter-mobile-info:hover {
-    gap: 1.2rem;
-}
-
-.wall-filter-mobile .wall-filter-mobile-info.show {
-    gap: 1.2rem;
-    box-shadow: var(--shadow-popup);
-}
-
-.wall-filter-mobile .div-line {
-    height: 4rem;
-    width: 1px;
-}
-
-.wall-filter-mobile svg {
-    fill: var(--main-accent-color);
-}
-
-.wall-filter-popup-mobile {
-    position: absolute;
-    display: flex;
-    background-color: var(--block-color);
-    border-radius: 2rem;
-    overflow: hidden;
-    z-index: 11;
-    visibility: hidden;
-    animation: hidePopupWallFilterMobile 0.2s;
-}
-
-.wall-filter-popup-mobile.show {
-    animation: showPopupWallFilterMobile 0.2s;
-    visibility: visible;
-}
-
-@keyframes showPopupWallFilterMobile {
-    from {
-        opacity: 0;
-        transform: translate(-100%, 0%);
-    }
-
-    to {
-        opacity: 1;
-        transform: translate(0, 0);
-    }
-}
-
-@keyframes hidePopupWallFilterMobile {
-    from {
-        transform: translate(0, 0);
-        opacity: 1;
-    }
-
-    to {
-        transform: translate(-100%, 0);
-        opacity: 0;
-    }
-}
-
-.wall-filter-popup-li-mobile {
-    display: block;
     width: 100%;
-    padding: 0 2.6rem;
-    line-height: 4rem;
-    text-transform: none;
-    cursor: pointer;
-    transition: 0.2s;
-    display: flex;
-    justify-content: center;
-    min-height: 4rem;
-    color: var(--else-text-color-50);
+
 }
 
-.wall-filter-popup-li-mobile.no-friends {
-    pointer-events: none;
-    color: var(--else-text-color-33);
-}
-
-.wall-filter-popup-li-mobile:first-child {
-    padding-left: calc(10.8733rem + 1.6rem);
-}
-
-.wall-filter-popup-mobile.friends .wall-filter-popup-li-mobile:first-child {
-    padding-left: calc(14.2817rem + 1.6rem);
-}
-
-.wall-filter-popup-li-mobile:hover {
-    background-color: var(--block-accent-color-06);
-}
-
-.wall-filter-popup-li-mobile input[type='radio'] {
-    display: none;
-}
-
-.wall-filter-popup-li-mobile:has([type='radio']:checked) {
-    color: var(--main-accent-color);
-    background-color: var(--block-accent-color-210);
+.wall-filter-mobile .wall-filter__choice {
+    flex-direction: row;
 }
 
 .no-found {
@@ -953,8 +856,6 @@
     fill: var(--block-color);
 }
 
-
-
 @media (max-width: 1320px) {
     .third-part-in-header {
         display: flex;
@@ -973,6 +874,18 @@
     header div:last-child {
         margin-left: auto;
     }
+
+    .wall-filter-mobile {
+        display: flex;
+    }
+
+    .wall-filter-popup-li {
+        max-width: max-content;
+    }
+
+    .wall__user-posts {
+        margin-top: 1.6rem;
+    }
 }
 
 @media (max-width: 920px) {
@@ -981,11 +894,7 @@
     }
 
     header {
-        gap: 4.1rem;
-    }
-
-    .third-part-in-header {
-        width: 33%;
+        gap: 2.6rem;
     }
 }
 
@@ -999,14 +908,6 @@
         z-index: 3;
     }
 
-    .wall__user-posts {
-        margin-top: 1.6rem;
-    }
-
-    .wall-filter-mobile {
-        display: flex;
-    }
-
     .first-part:has(#wall-filter-all:checked)+.second-and-third-parts #posts-filter-all,
     .first-part:has(#wall-filter-friends:checked)+.second-and-third-parts #posts-filter-friends {
         display: none;
@@ -1015,6 +916,27 @@
     .second-and-third-parts .second-part:has(#wall-filter-all-mobile:checked) #posts-filter-all,
     .second-and-third-parts .second-part:has(#wall-filter-friends-mobile:checked) #posts-filter-friends {
         display: block;
+    }
+
+    .wall__comments .other-users .user-comment .date {
+        display: none
+    };
+
+    .wall__comments .other-users .user-comment .date.mobile {
+        display: block;
+    };
+
+    .wall__comments .other-users .user-comment .date,
+    .wall__comments .other-users .user-comment .delete-comment {
+        opacity: 1;
+    }
+
+    header div:last-child {
+        margin-left: 0;
+    }
+
+    .third-part-in-header {
+        width: 100%;
     }
 }
 
@@ -1029,19 +951,10 @@
 
     header {
         justify-content: space-between;
-        gap: 2.6rem;
     }
 
     .third-part-in-header li a {
         display: block;
-    }
-
-    header div:last-child {
-        margin-left: 0;
-    }
-
-    .third-part-in-header {
-        width: 100%;
     }
 
     .wall__comments .other-users .user-comment {
@@ -1082,14 +995,6 @@
         gap: 1rem;
     }
 
-    .user-post .three-dots-popup {
-        top: 4.7rem;
-    }
-
-    /* .user-post .first-and-second-names.rampus {
-        align-items: flex-start;
-    } */
-
     .user-post .first-and-second-names.rampus img,
     .user-post .first-and-second-names.user-from-top img {
         max-width: 14px;
@@ -1097,27 +1002,14 @@
         min-height: 14px;
         min-width: 14px;
     }
-
-    .wall-filter-mobile svg {
-        max-height: 10px;
-        min-height: 10px;
-    }
-
-    .wall-filter-mobile.show {
-        padding-right: 17.7083rem;
-    }
-
-    .wall-filter-popup-li-mobile:first-child {
-        padding-left: calc(10.1417rem + 1.6rem);
-    }
-
-    .wall-filter-popup-mobile.friends .wall-filter-popup-li-mobile:first-child {
-        padding-left: calc(12.8683rem + 1.6rem);
-    }
 }
 
 @media (max-width: 480px) {
     .wrapper {
         max-width: calc(100% - 3.2rem);
+    }
+
+    .wall-filter-popup-li span {
+        display: none;
     }
 }
