--- a/css/trophy.css
+++ b/css/trophy.css
@@ -35,7 +35,8 @@
     box-shadow: var(--shadow-small);
     padding: 1rem 1.6rem;
     border-radius: 2rem;
-    min-width: calc((100% - 1rem*2)/3);
+    min-width: min-content;
+    width: calc((100% - 1rem*2)/3);
     transition: 0.2s;
     cursor: default;
 }
@@ -89,4 +90,58 @@
     display: flex;
     align-items: center;
     gap: 0.625rem;
+}
+
+.br-mobile {
+    display: none;
+}
+
+@media (max-width: 1320px) {
+    .third-part {
+        display: none;
+    }
+}
+
+@media (max-width: 920px) {
+    main {
+        padding: 0;
+    }
+}
+
+@media (max-width: 820px) {
+    .first-part {
+        display: none;
+    }
+
+    .trophy-info {
+        flex-direction: column;
+    }
+
+    .trophy-info>div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .user-trophy-info a {
+        justify-content: center;
+    }
+
+    .current-trophy .date {
+        text-align: center;
+    }
+
+    .br-mobile {
+        display: block;
+    }
+
+    .current-trophy {
+        width: calc((100% - 1rem*2)/2);
+    }
+
+    .first-part-mobile {
+        display: block;
+        z-index: 3;
+    }
+
 }
