--- a/css/main.css
+++ b/css/main.css
@@ -253,18 +253,27 @@ textarea {
 
 .auth__section,
 .reg__section {
-    max-width: 82.1rem;
+    max-width: calc(30rem + 30rem + 4.1rem + 2.6rem*2);
     height: max-content;
     background-color: var(--block-color);
     box-shadow: var(--shadow-small);
     border-radius: 2rem;
-    padding: 4.1rem;
+    padding: 1.6rem 2.6rem;
     display: flex;
     margin: 0 auto;
     margin-top: 1.6rem;
     margin-bottom: 2.6rem;
-    align-items: center;
+    align-items: flex-start;
     gap: 4.1rem;
+    position: relative;
+}
+
+.auth__center,
+.reg__center {
+    display: flex;
+    flex-direction: column;
+    min-height: calc(100vh - 7.2rem*2);
+    justify-content: center;
 }
 
 .auth__notify {
@@ -273,12 +282,15 @@ textarea {
     box-shadow: var(--shadow-small);
     border-radius: 1rem;
     margin: 0 auto;
-    margin-top: 1.6rem;
     max-width: max-content;
     scale: 90%;
     opacity: 0;
     transition: 0.2s;
+    left: 0;
+    right: 0;
     text-align: center;
+    position: absolute;
+    top: calc(-4.6rem - 1.6rem);
 }
 
 .auth__notify.success {
@@ -305,32 +317,21 @@ textarea {
     background-color: var(--block-accent-color-110);
 }
 
-.auth__section>.div-line {
-    width: 1px;
-    height: calc(52.7rem - 8.2rem);
+.auth__section img,
+.reg__section img {
+    height: 30rem;
+    width: 30rem;
 }
 
-.reg__section .div-line {
-    width: 1px;
-    height: calc(52.7rem - 17rem);
-}
-
-.auth__section img {
-    height: 25rem;
-    width: 25rem;
-    margin: 0 3.5rem;
-}
-
-.auth__form {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    min-height: calc(52.7rem - 8.2rem);
-    width: 100%;
-}
-
+.auth__form,
 .reg__form {
     width: 100%;
+    margin-top: 1.6rem;
+}
+
+input.auth-and-reg,
+input.auth-and-reg::placeholder {
+    font-size: var(--font-size-2);
 }
 
 .auth__form legend,
@@ -339,7 +340,7 @@ textarea {
     font-weight: 600;
     margin: 0;
     padding: 0;
-    margin-bottom: 6.6rem;
+    margin-bottom: 4.1rem;
 }
 
 .auth__form label,
@@ -347,8 +348,14 @@ textarea {
     display: inline-block;
     margin: 0;
     padding: 0;
-    margin-bottom: 3.8rem;
+    margin-bottom: 2.6rem;
     width: 100%;
+    font-weight: 600;
+}
+
+.auth__form label:last-child,
+.reg__form label:last-child {
+    margin-bottom: 6.6rem;
 }
 
 .auth__form input,
@@ -397,8 +404,8 @@ textarea {
     font-size: var(--font-size-3);
     width: 100%;
     min-height: 4rem;
-    border-radius: 2rem;
-    font-weight: 400;
+    border-radius: 1rem;
+    font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -407,6 +414,36 @@ textarea {
 .auth__form button:hover,
 .reg__form button:hover {
     opacity: 87%;
+}
+
+.auth__buttons,
+.reg__buttons {
+    display: flex;
+    gap: 0.8rem;
+}
+
+.auth__buttons .create-account,
+.reg__buttons .have-account {
+    min-width: 4rem;
+    max-width: 4rem;
+    min-height: 4rem;
+    max-height: 4rem;
+    border-radius: 1rem;
+    background-color: var(--block-accent-color-210);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.auth__buttons .create-account svg,
+.reg__buttons .have-account svg {
+    fill: var(--main-accent-color);
+    height: 13px;
+    width: 13px;
+}
+
+.reg__buttons .have-account svg {
+    transform: rotate(180deg);
 }
 
 .auth__links,
@@ -423,20 +460,6 @@ textarea {
     color: var(--else-text-color-33);
 }
 
-.reg__form>div {
-    display: flex;
-    gap: 2.6rem;
-}
-
-.reg__input-div {
-    display: flex;
-    flex-direction: column;
-    align-items: start;
-    height: 100%;
-    width: 100%;
-    max-width: calc((100% - 4.2rem - 1px)/2);
-}
-
 .reg__input-div a {
     margin-top: 2.7rem;
     color: var(--else-text-color-50);
@@ -448,6 +471,7 @@ textarea {
 
 .reg__input-div span {
     font-size: var(--font-size-1);
+    font-weight: 400;
     color: var(--else-text-color-33);
     transition: 0.2s ease-in-out;
 }
@@ -490,8 +514,12 @@ textarea {
     display: inline-flex;
     justify-content: space-between;
     position: absolute;
-    top: 7.8rem;
+    top: 0.5rem;
     left: 0;
+}
+
+.reg__input-div div.password {
+    top: 7.2rem;
 }
 
 #reg__label_pass-1,
