--- a/css/profile.css
+++ b/css/profile.css
@@ -11,7 +11,7 @@
     --block-accent-color-110: #E6E6E6;
     --block-accent-color-06: #F0F0F0;
     --block-accent-color-210: #EFF5F2;
-    --like-button-accent-color: #FF220C10;
+    --like-button-accent-color: #FFE9E7;
     --param-color: #533A7B;
     --posts-color: #3891A6;
     --likes-color: #DB5461;
