--- a/css/people.css
+++ b/css/people.css
@@ -15,7 +15,7 @@
     --posts-color: #3891A6;
     --likes-color: #DB5461;
     --comments-color: #D5A021;
-    --like-button-accent-color: #FF220C10;
+    --like-button-accent-color: #FFE9E7;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
