--- a/css/trophy.css
+++ b/css/trophy.css
@@ -11,7 +11,7 @@
     --block-accent-color-110: #E6E6E6;
     --block-accent-color-06: #F0F0F0;
     --block-accent-color-210: #EFF5F2;
-    --like-button-accent-color: #FF220C10;
+    --like-button-accent-color: #FFE9E7;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
