reg js func in process. valid reg form

--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,8 @@ input.auth-and-reg::placeholder {
     opacity: 87%;
 }
 
-.auth__form button:active {
+.auth__form button:active,
+.reg__form button:active {
     transform: scale(95%);
 }
 
