new rating trophy ui

--- a/css/profile.css
+++ b/css/profile.css
@@ -13,9 +13,9 @@
     --block-accent-color-210: #EFF5F2;
     --like-button-accent-color: #FFE9E7;
     --param-color: #533A7B;
-    --posts-color: #3891A6;
-    --likes-color: #DB5461;
-    --comments-color: #D5A021;
+    --posts-color: #4BA3C3;
+    --likes-color: #FA198B;
+    --comments-color: #FFBA49;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
