new post form and new comment form

--- a/css/main.css
+++ b/css/main.css
@@ -746,6 +746,7 @@ input.auth-and-reg::placeholder {
 .second-part {
     width: 100%;
     min-width: 0;
+    position: relative;
 }
 
 .third-part {
