--- a/css/wall.css
+++ b/css/wall.css
@@ -12,6 +12,13 @@
     --block-accent-color-06: #F0F0F0;
     --block-accent-color-210: #EFF5F2;
     --like-button-accent-color: #FFE9E7;
+    --param-color: #533A7B;
+    --posts-color: #4BA3C3;
+    --back-posts-color: #DBEDF3;
+    --likes-color: #FA198B;
+    --back-likes-color: #FED1E8;
+    --comments-color: #FFBA49;
+    --back-comments-color: #FFF1DB;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
@@ -21,7 +28,6 @@
 }
 
 .wall__user-posts {
-    margin-top: 2.6rem;
     display: flex;
     flex-direction: column-reverse;
     gap: 1.6rem;
@@ -147,75 +153,139 @@
 
 .wall__new-post {
     display: flex;
+    flex-direction: column;
+    position: sticky;
+    width: 100%;
+    z-index: 1;
+    bottom: 2.6rem;
+    background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
+    box-shadow: var(--shadow-popup);
+    border-radius: 2rem;
+    padding: 0.39rem;
 }
 
-.wall__new-post form,
+.wall__new-post>p {
+    font-size: var(--font-size-2);
+    margin-top: 1.1rem;
+    margin-bottom: 1.1rem;
+    margin-left: 1.1rem;
+    color: var(--block-color);
+}
+
+.wall__new-post form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+    position: relative;
+    width: 100%;
+    transition: 0.2s;
+    background-color: var(--block-color);
+    border-radius: calc(2rem - 0.39rem);
+}
+
 .wall__comments form {
+    cursor: text;
     display: flex;
     align-items: flex-start;
     gap: 1.6rem;
     position: relative;
-    border: 1px solid var(--else-text-color-33);
-    border-radius: 2rem;
     width: 100%;
-    transition: 0.2s 0.2s;
+    transition: 0.2s;
+    margin-top: 0.625rem;
 }
 
-.wall__new-post button,
+.postarea-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.1rem 1.1rem 1.1rem;
+}
+
+.wall__new-post button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    pointer-events: none;
+    transition: 0.2s;
+}
+
 .wall__comments button {
     background-color: transparent;
     border: none;
     padding: 0;
     display: flex;
-    position: absolute;
-    right: 0;
-    top: 0;
-    bottom: 0;
     align-items: center;
     margin: 0;
+    pointer-events: none;
+    transition: 0.2s;
     opacity: 0;
     transform: scale(50%);
-    pointer-events: none;
+}
+
+.wall__new-post button svg {
+    fill: var(--else-text-color-33);
+    min-width: 3.4rem;
+    max-width: 3.4rem;
+    min-height: 3.4rem;
+    max-height: 3.4rem;
     transition: 0.2s;
 }
 
-.wall__new-post button.active,
-.wall__comments button.active {
-    right: calc(-25px - 1rem);
-    transition: 0.2s 0.2s;
-    transform: scale(100%);
-    opacity: 1;
+.wall__comments button svg {
+    fill: var(--else-text-color-33);
+    min-width: 2.8rem;
+    max-width: 2.8rem;
+    min-height: 2.8rem;
+    max-height: 2.8rem;
+    transition: 0.2s;
+}
+
+.wall__new-post button.active {
     pointer-events: all;
 }
 
-#textarea-post,
-.textarea-comment {
+.wall__comments button.active {
+    pointer-events: all;
+    opacity: 1;
+    transform: scale(100%);
+}
+
+.wall__new-post button.active svg,
+.wall__comments button.active svg {
+    fill: var(--main-accent-color);
+}
+
+#textarea-post {
     width: 100%;
     min-height: 4rem;
-    max-height: 30rem;
+    max-height: 20rem;
     outline: none;
     background-color: transparent;
     padding: 1.25rem 2.6rem;
+    padding-left: 1.6rem;
     margin: 0;
     word-wrap: break-word;
     word-break: break-word;
     scrollbar-width: none;
     overflow-y: auto;
-    font-size: var(--font-size-1);
+    font-size: var(--font-size-2);
 }
 
-#textarea-post {
-    padding-left: calc(1.6rem + 18px + 1rem);
-}
-
-.wall__new-post:has(button.active) form {
-    margin-right: calc(25px + 1.6rem + 1rem);
-    transition: 0.2s;
-}
-
-.wall__comments:has(button.active) form {
-    margin-right: calc(25px + 1rem);
-    transition: 0.2s;
+.textarea-comment {
+    width: 100%;
+    max-height: 10rem;
+    outline: none;
+    background-color: transparent;
+    padding: 1.4rem 0 0;
+    margin: 0;
+    word-wrap: break-word;
+    word-break: break-word;
+    scrollbar-width: none;
+    overflow-y: auto;
+    font-size: var(--font-size-2);
 }
 
 #textarea-post::-webkit-scrollbar,
@@ -223,25 +293,26 @@
     width: 0;
 }
 
-.wall__new-post form:has(#textarea-post:focus),
-.wall__comments form:has(.textarea-comment:focus) {
-    border: 1px solid var(--else-text-color-50);
-}
-
-#textarea-post_label,
-.textarea-comment_label {
-    font-size: var(--font-size-1);
-    line-height: var(--font-size-1);
+#textarea-post_label {
+    font-size: var(--font-size-2);
+    line-height: var(--font-size-2);
     color: var(--else-text-color-50);
     position: absolute;
-    left: 2.7rem;
+    left: 1.6rem;
     top: 1.35rem;
     cursor: text;
     pointer-events: none;
 }
 
-#textarea-post_label {
-    left: calc(1.6rem + 18px + 1rem);
+.textarea-comment_label {
+    font-size: var(--font-size-2);
+    line-height: var(--font-size-1);
+    color: var(--else-text-color-50);
+    position: absolute;
+    left: 0;
+    top: 1.4rem;
+    cursor: text;
+    pointer-events: none;
 }
 
 #textarea-post_input,
@@ -419,7 +490,6 @@
     display: flex;
     gap: 1.6rem;
     align-items: center;
-    margin-top: 1.6rem;
 }
 
 .wall__comments .current-user img {
@@ -737,17 +807,16 @@
 }
 
 .post-image-icon {
-    position: absolute;
-    left: calc(1.6rem - 9px/2);
-    top: calc((4rem - 28px) / 2);
     cursor: pointer;
     background-color: transparent;
     border-radius: 1rem;
-    min-width: 28px;
-    min-height: 28px;
-    max-width: 28px;
-    max-height: 28px;
+    padding-right: 1.1rem;
+    padding-left: 0.5rem;
+    min-width: 2.8rem;
+    min-height: 3.4rem;
+    max-height: 3.4rem;
     display: flex;
+    gap: 0.625rem;
     align-items: center;
     justify-content: center;
     transition: 0.2s;
@@ -758,9 +827,16 @@
 }
 
 .post-image-icon svg {
+    min-height: 19px;
     max-height: 19px;
+    min-width: 19px;
     max-width: 19px;
-    fill: var(--else-text-color-50);
+    fill: var(--main-accent-color);
+}
+
+.post-image-icon span {
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
 }
 
 #current-post-image {
@@ -771,7 +847,11 @@
 }
 
 #textarea-post.image-uploaded {
-    margin-bottom: calc(1.6rem + 100px + 1rem);
+    margin-top: calc(1.6rem + 100px + 1rem);
+}
+
+#textarea-post.image-uploaded~#textarea-post_label {
+    top: calc(1.35rem + 1.6rem + 100px + 1rem);
 }
 
 .current-post-image-div {
@@ -779,9 +859,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* top: calc(4rem + 1rem); */
-    bottom: calc(1.6rem);
+    top: 1.6rem;
     left: 1.6rem;
+    box-shadow: var(--shadow-big);
 }
 
 .post-image-delete {
@@ -800,7 +880,7 @@
 }
 
 .current-post-image-div:hover img {
-    opacity: 80%;
+    opacity: 50%;
 }
 
 .post-image-delete svg {
