--- a/css/chats.css
+++ b/css/chats.css
@@ -11,11 +11,14 @@
     --block-accent-color-110: #E6E6E6;
     --block-accent-color-06: #F0F0F0;
     --block-accent-color-210: #EFF5F2;
-    --param-color: #533A7B;
-    --posts-color: #3891A6;
-    --likes-color: #DB5461;
-    --comments-color: #D5A021;
     --like-button-accent-color: #FFE9E7;
+    --param-color: #533A7B;
+    --posts-color: #4BA3C3;
+    --back-posts-color: #DBEDF3;
+    --likes-color: #FA198B;
+    --back-likes-color: #FED1E8;
+    --comments-color: #FFBA49;
+    --back-comments-color: #FFF1DB;
     --shadow-big: 0 0 15px #02020207;
     --shadow-small: 0 0 12px #02020205;
     --shadow-popup: 0 0 9px #02020211;
@@ -24,25 +27,242 @@
     height: 100%
 }
 
-.all-chats > p:first-child {
-  font-size: var(--font-size-4);
-  font-weight: 600;
-  margin-bottom: 2.6rem;
+.all-chats>p:first-child {
+    font-size: var(--font-size-4);
+    font-weight: 600;
+    margin-bottom: 2.6rem;
 }
 
-.all-chats > p:first-child span {
-  color: var(--else-text-color-50);
-  margin-left: 1rem;
+.all-chats>p:first-child span {
+    color: var(--else-text-color-50);
+    margin-left: 1rem;
 }
 
 .search-chats-div {
-  position: relative;
+    position: relative;
 }
 
 .all-chats ul {
-  margin: 0;
+    margin: 0;
     margin-top: 0px;
-  padding: 0;
-  list-style: none;
-  margin-top: 1.6rem;
+    padding: 0;
+    list-style: none;
+    margin-top: 1.6rem;
+}
+
+.chat-with-user {
+    height: calc(100vh - 2.6rem*2 - 7.2rem);
+}
+
+#success-load-chat {
+    display: flex;
+    gap: 1.1rem;
+    flex-direction: column-reverse;
+    height: calc(100% - 8.2rem - 10.4rem);
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    padding: 1.6rem 2.1rem;
+}
+
+.user-info {
+    height: 8.2rem;
+    background-color: var(--block-color);
+    box-shadow: var(--shadow-small);
+    border-radius: 2rem;
+    padding: 1.6rem 2.1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.chat__user-back {
+    color: var(--error-accent-color);
+    font-size: var(--font-size-2);
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    gap: 0.625rem;
+}
+
+.chat__user-back svg {
+    fill: var(--error-accent-color);
+    transform: rotate(180deg);
+    min-height: 11px;
+    max-height: 11px;
+}
+
+.chat__user-avatar {
+    min-height: 50px;
+    min-width: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.message {
+    width: 100%;
+    max-width: fit-content;
+    padding: 1.1rem 1.6rem;
+    font-size: var(--font-size-2);
+}
+
+.message.your-message {
+    margin-left: auto;
+    background-color: var(--block-accent-color-06);
+    border-radius: 1rem 1rem 0 1rem;
+}
+
+.message.other-message {
+    background-color: var(--block-accent-color-210);
+    color: var(--main-accent-color);
+    border-radius: 1rem 1rem 1rem 0;
+}
+
+.chat__new-message {
+    display: flex;
+    flex-direction: column;
+    position: sticky;
+    width: 100%;
+    z-index: 1;
+    bottom: 2.6rem;
+    background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
+    box-shadow: var(--shadow-popup);
+    border-radius: 2rem;
+    padding: 0.39rem;
+}
+
+.chat__new-message>p {
+    font-size: var(--font-size-2);
+    margin-top: 1.1rem;
+    margin-bottom: 1.1rem;
+    margin-left: 1.1rem;
+    color: var(--block-color);
+}
+
+.chat__new-message form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.1rem;
+    position: relative;
+    width: 100%;
+    transition: 0.2s;
+    background-color: var(--block-color);
+    border-radius: calc(2rem - 0.39rem);
+}
+
+.current-message-image-div {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top: 1.6rem;
+    left: 1.6rem;
+    box-shadow: var(--shadow-big);
+}
+
+#textarea-message {
+    width: 100%;
+    min-height: 4rem;
+    max-height: 20rem;
+    outline: none;
+    background-color: transparent;
+    padding: 1.25rem 2.6rem;
+    padding-left: 2.6rem;
+    padding-left: 1.6rem;
+    margin: 0;
+    word-wrap: break-word;
+    word-break: break-word;
+    scrollbar-width: none;
+    overflow-y: auto;
+    font-size: var(--font-size-2);
+}
+
+#textarea-message_label {
+    font-size: var(--font-size-2);
+    line-height: var(--font-size-2);
+    color: var(--else-text-color-50);
+    position: absolute;
+    left: 1.6rem;
+    top: 1.35rem;
+    cursor: text;
+    pointer-events: none;
+}
+
+#textarea-message_input {
+    visibility: hidden;
+    position: absolute;
+    left: -9999px;
+}
+
+#message-image {
+    position: absolute;
+    pointer-events: none;
+    cursor: default;
+    opacity: 0;
+}
+
+.messagearea-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1.1rem 1.1rem 1.1rem;
+}
+
+.message-image-icon {
+    cursor: pointer;
+    background-color: transparent;
+    border-radius: 1rem;
+    padding-right: 1.1rem;
+    padding-left: 0.5rem;
+    min-width: 2.8rem;
+    min-height: 3.4rem;
+    max-height: 3.4rem;
+    display: flex;
+    gap: 0.625rem;
+    align-items: center;
+    justify-content: center;
+    transition: 0.2s;
+}
+
+.message-image-icon svg {
+    min-height: 19px;
+    max-height: 19px;
+    min-width: 19px;
+    max-width: 19px;
+    fill: var(--main-accent-color);
+}
+
+.message-image-icon span {
+    font-size: var(--font-size-1);
+    color: var(--else-text-color-50);
+}
+
+.chat__new-message button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    margin: 0;
+    pointer-events: none;
+    transition: 0.2s;
+}
+
+.chat__new-message button.active {
+    pointer-events: all;
+}
+
+.chat__new-message button.active svg {
+    fill: var(--main-accent-color);
+}
+
+.chat__new-message button svg {
+    fill: var(--else-text-color-33);
+    min-width: 3.4rem;
+    max-width: 3.4rem;
+    min-height: 3.4rem;
+    max-height: 3.4rem;
+    transition: 0.2s;
 }
