--- a/css/wall.css
+++ b/css/wall.css
@@ -155,9 +155,10 @@
     display: flex;
     flex-direction: column;
     position: sticky;
-    width: 100%;
+    max-width: 100%;
     z-index: 1;
     bottom: 2.6rem;
+    margin: 0 2.6rem;
     background: linear-gradient(-135deg, var(--posts-color), var(--likes-color), var(--comments-color));
     box-shadow: var(--shadow-popup);
     border-radius: 2rem;
@@ -175,11 +176,11 @@
 .wall__new-post form {
     display: flex;
     flex-direction: column;
-    gap: 1.1rem;
+    gap: 0.39rem;
     position: relative;
     width: 100%;
     transition: 0.2s;
-    background-color: var(--block-color);
+    /* background-color: var(--block-color); */
     border-radius: calc(2rem - 0.39rem);
 }
 
@@ -198,7 +199,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 1.1rem 1.1rem 1.1rem;
+    /* padding: 0 1.1rem; */
 }
 
 .wall__new-post button {
@@ -210,6 +211,18 @@
     margin: 0;
     pointer-events: none;
     transition: 0.2s;
+    opacity: 0;
+    transform: scale(50%) translateY(1rem);
+}
+
+#textarea-post_sumbit {
+    position: absolute;
+    right: 0.39rem;
+    top: 0.39rem;
+}
+
+#textarea-post_sumbit.image-uploaded {
+    top: calc(0.39rem + 0.39rem*2 + 100px + 0.39rem);
 }
 
 .wall__comments button {
@@ -222,15 +235,15 @@
     pointer-events: none;
     transition: 0.2s;
     opacity: 0;
-    transform: scale(50%);
+    transform: scale(50%) translateY(1rem);
 }
 
 .wall__new-post button svg {
     fill: var(--else-text-color-33);
-    min-width: 3.4rem;
-    max-width: 3.4rem;
-    min-height: 3.4rem;
-    max-height: 3.4rem;
+    min-width: calc(4rem - 0.39rem*2);
+    max-width: calc(4rem - 0.39rem*2);
+    min-height: calc(4rem - 0.39rem*2);
+    max-height: calc(4rem - 0.39rem*2);
     transition: 0.2s;
 }
 
@@ -245,6 +258,8 @@
 
 .wall__new-post button.active {
     pointer-events: all;
+    opacity: 1;
+    transform: scale(100%);
 }
 
 .wall__comments button.active {
@@ -260,12 +275,14 @@
 
 #textarea-post {
     width: 100%;
-    min-height: 4rem;
+    min-height: calc(4rem);
     max-height: 20rem;
     outline: none;
-    background-color: transparent;
-    padding: 1.25rem 2.6rem;
+    background-color: var(--block-color);
+    border-radius: calc(2rem - 0.39rem);
+    padding: 1.25rem 0;
     padding-left: 1.6rem;
+    padding-right: calc((4rem - 0.39rem*2) + 0.39rem*2);
     margin: 0;
     word-wrap: break-word;
     word-break: break-word;
@@ -809,7 +826,7 @@
 .post-image-icon {
     cursor: pointer;
     background-color: transparent;
-    border-radius: 1rem;
+    border-radius: calc(2rem - 0.39rem);
     padding-right: 1.1rem;
     padding-left: 1.1rem;
     min-width: 2.8rem;
@@ -822,46 +839,62 @@
     transition: 0.2s;
 }
 
-.post-image-icon:hover {
+/* .post-image-icon:hover {
     background-color: var(--block-accent-color-06);
-}
+} */
 
 .post-image-icon svg {
     min-height: 19px;
     max-height: 19px;
     min-width: 19px;
     max-width: 19px;
-    fill: var(--main-accent-color);
+    fill: var(--block-color);
+    transition: 0.2s;
+}
+
+.post-image-icon:hover svg {
+    opacity: 80%;
 }
 
 .post-image-icon span {
     font-size: var(--font-size-1);
-    color: var(--else-text-color-50);
+    color: var(--block-color);
+    transition: 0.2s;
+}
+
+.post-image-icon:hover span {
+    opacity: 80%;
 }
 
 #current-post-image {
     object-fit: cover;
     height: 100px;
-    border-radius: calc(2rem - 1.6rem);
+    border-radius: calc(2rem - 0.39rem*2);
     transition: 0.2s;
 }
 
 #textarea-post.image-uploaded {
-    margin-top: calc(1.6rem + 100px + 1rem);
+    margin-top: calc(0.39rem*2 + 100px + 0.39rem);
 }
 
 #textarea-post.image-uploaded~#textarea-post_label {
-    top: calc(1.35rem + 1.6rem + 100px + 1rem);
+    top: calc(1.35rem + 0.39rem*2 + 100px + 0.39rem);
 }
 
 .current-post-image-div {
     position: absolute;
-    display: flex;
+    display: none;
     align-items: center;
-    justify-content: center;
-    top: 1.6rem;
-    left: 1.6rem;
-    box-shadow: var(--shadow-big);
+    justify-content: left;
+    width: 100%;
+    max-width: 100%;
+    padding: 0.39rem;
+    border-radius: calc(2rem - 0.39rem);
+    background-color: var(--block-color);    
+}
+
+.current-post-image-div.image-uploaded {
+    display: flex;
 }
 
 .post-image-delete {
