--- a/css/wall.css
+++ b/css/wall.css
@@ -462,6 +462,7 @@
     align-items: center;
     gap: 1.6rem;
     position: relative;
+    width: 100%;
 }
 
 .wall__user-info img:first-child {
@@ -492,6 +493,18 @@
     gap: 0.39rem;
 }
 
+.wall__user-info div.for-friends {
+    flex-direction: row;
+    background: var(--block-accent-color-210);
+    border-radius: 1rem;
+    padding: 0.625em 1rem;
+    align-self: flex-start;
+    margin-left: auto;
+    align-items: center;
+    margin-right: 1.6rem;
+    gap: 0.625rem;
+}
+
 .wall__user-info p {
     margin: 0;
     font-weight: 600;
@@ -500,7 +513,21 @@
 .wall__user-info span {
     font-size: var(--font-size-1);
     color: var(--main-accent-color);
-    text-transform: lowercase;
+    /* text-transform: lowercase; */
+    display: flex;
+    gap: 0.39rem;
+}
+
+.wall__user-info span.for-friends {
+    color: var(--main-accent-color);
+}
+
+div.for-friends svg {
+    fill: var(--main-accent-color);
+    min-width: 16px;
+    min-height: 16px;
+    max-width: 16px;
+    max-height: 16px;
 }
 
 .wall__comments .current-user {
@@ -890,7 +917,7 @@
     max-width: 100%;
     padding: 0.39rem;
     border-radius: calc(2rem - 0.39rem);
-    background-color: var(--block-color);    
+    background-color: var(--block-color);
 }
 
 .current-post-image-div.image-uploaded {
@@ -934,6 +961,54 @@
 
 .current-post-image-div:hover .post-image-delete:hover svg {
     fill: var(--block-color);
+}
+
+.post-mode-fieldset {
+    margin: 0;
+    padding: 0.39rem;
+    display: flex;
+    align-items: center;
+    border: transparent;
+    min-height: 3.4rem;
+    max-height: 3.4rem;
+    border-radius: calc(2rem - 0.39rem);
+    outline: none;
+    background-color: var(--background-color);
+    font-size: var(--font-size-1);
+}
+
+.post-mode-fieldset legend {
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    width: 1px;
+}
+
+.post-mode-fieldset input {
+    display: none;
+}
+
+.post-mode-fieldset label {
+    transition: 0.2s;
+    cursor: pointer;
+    border-radius: calc(2rem - 0.39rem - 0.39rem);
+    color: var(--else-text-color-50);
+    min-height: calc(3.4rem - 0.39rem*2);
+    max-height: calc(3.4rem - 0.39rem*2);
+    display: flex;
+    align-items: center;
+    padding-right: 1.1rem;
+    padding-left: 1.1rem;
+}
+
+.post-mode-fieldset label:hover {
+    background-color: var(--block-accent-color-06);
+}
+
+.post-mode-fieldset div:has([type="radio"]:checked) label {
+    background-color: var(--block-accent-color-210);
+    color: var(--main-accent-color);
+    font-weight: 600;
 }
 
 @media (max-width: 1320px) {
